# jobicy_job_postings

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
jobicy_job_postings/: __init__.py  dataset.py  features.py  plots.py
jobicy_job_postings/modeling/: predict.py  train.py
notebooks/: 0.01-wbb-api-requests.ipynb
terraform/: glue.tf  iam_roles.tf  main.tf  outputs.tf  s3.tf
terraform/assets/: extract_postings.py
